(version 1.0.2) correctifs + améliorations (exportation OPML, système de tâche, système de journalisation)

--- a/lecteur/lecteur.css
+++ b/lecteur/lecteur.css
@@ -198,7 +198,7 @@ header ul li a, header ul li a:hover {
 } 
 
 
-#resultats section#ajouterFlux *, #resultats section#modifierFlux * { 
+#resultats section#ajouterFlux *, #resultats section#modifierFlux * , #resultats section#opml * { 
 	display: block; 
 	color: gray; 
 	background: white; 
