--- a/gabarit.css
+++ b/gabarit.css
@@ -104,6 +104,12 @@
 	color: #4682B4; 
 } 
 
+#articlesListe .article article .extrait { 
+	padding-left: 0.15rem; 
+	cursor: pointer; 
+	color: #4682B4; 
+} 
+
 #articlesListe .article article .suivi[suivi="oui"] { 
 	color: #FF4500; 
 } 
@@ -197,4 +203,37 @@
 #choixVue span a+a { 
 	margin-left: 0.25; 
 	border-left: solid 1px rgba(30, 45, 59, 1);
+} 
+
+/*---*/ 
+
+#extrait { 
+	position: fixed; 
+	display: none; 
+	top: 0px; 
+	left: 0px; 
+	width: 100%; 
+	height: 100%; 
+	background: rgba(30, 45, 59, 0.45); 
+} 
+
+#extrait span.conteneur { 
+	display: flex; 
+	flex-direction: column; 
+	max-width: 35rem; 
+	margin: auto; 
+	padding: 1rem; 
+	background: #fff; 
+} 
+
+#extrait span.conteneur span.action a { 
+	display: inline-block;
+	margin-bottom: 0.25rem; 
+	padding: 0.25rem; 
+	font-size: 80%; 
+	border-bottom: dashed 1px rgba(30, 45, 59, 1); 
+} 
+
+#extrait span.conteneur>* { 
+	flex: 1;
 } 
